custom-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: custom
  template:
    metadata:
      labels:
        app: custom
    spec:
      containers:
      - name: github-aap-container
        image: azmiabad/custom:latest
        ports:
        - containerPort: 80
