node-git.yml
apiVersion: v1
kind: Service
metadata:
  name: custom-service
spec:
  type: NodePort
  selector:
    app: custom
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30070
